--- a/index.html
+++ b/index.html
@@ -15,62 +15,75 @@
     <div class="logo-cont">
       <img alt="logo image" class="logo-img" src="images/logo.svg">
     </div>
-    <div class="main-content-cont">
-      <p>
-        Bill
-      </p>
-      <input type="Number" name="">
-      <p>
-        Select Tip %
-      </p>
-      <div class=tip-grid>
-        5%
-        10%
-        15%
-        25%
-        50%
-        Custom
-      </div>
-      <p>
-        Number of People
-      </p>
-      <input type="Number" name="">
-      <div class="tip-output-cont">
-        <div>
-          <div class="tip-person-cont">
-            <p class="tip-p">
-              Tip Amount
-            </p>
-            <p class="person-p">
-              / person
-            </p>
-          </div>
-          <diV>
-          </diV>
+    <div class="main-cont">
+      <div class="main-content-cont">
+        <p class="bill-p">
+          Bill
+        </p>
+        <input id="bill-input" type="Number" value="0" min="0">
+        <p class="select-tip-p">
+          Select Tip %
+        </p>
+        <div class="tip-grid">
+          <button class="btn-5">
+            5%
+          </button>
+          <button class="btn-10">
+            10%
+          </button>
+          <button class="btn-15">
+            15%
+          </button>
+          <button class="btn-25">
+            25%
+          </button>
+          <button class="btn-50">
+             50%
+          </button>
+          <input class="custom-input" type="number" name="Custom" placeholder="Custom">
         </div>
-        <div>
-          <div class="total-person-cont">
-            <p class="total-p">
-              Total
-            </p>
-            <p class="person-p">
-              / person
-            </p>
+        <p class="number-of-people-p">
+          Number of People
+        </p>
+        <input id="number-of-people-input" type="Number" value="1" min="1">
+        <div class="tip-output-cont">
+          <div class="tip-person">
+            <div class="tip-person-cont">
+              <p class="tip-p">
+                Tip Amount
+              </p>
+              <p class="person-p">
+                / person
+              </p>
+            </div>
+            <diV>
+            </diV>
+          </div>
+          <div class="total-person">
+            <div class="total-person-cont">
+              <p class="total-p">
+                Total
+              </p>
+              <p class="person-p">
+                / person
+              </p>
+            </div>
+            <div>
+            </div>
           </div>
           <div>
+            <button>
+              Reset
+            </button>
           </div>
         </div>
-        <div>
-          <button>
-            Reset
-          </button>
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="https://github.com/YousefKhalid-iq/tip-calculator-app">Yousef Khalid</a>.
         </div>
       </div>
     </div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/YousefKhalid-iq/tip-calculator-app">Yousef Khalid</a>.
-    </div>
+    
   </main>
 </body>
 </html>
