--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="number-of-people-p">
               Number of People
             </p>
-            <div class="error-msg">Can't be zero</div>
+            <div class="error-msg">Can't be zero or less</div>
             <input data-people id="number-of-people-input" type="Number" value="1" min="0">
           </div>
           <div class="tip-output-cont">
@@ -84,9 +84,8 @@
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
           Coded by <a href="https://github.com/YousefKhalid-iq/tip-calculator-app">Yousef Khalid</a>.
         </div>
-      </div>
+      </div> 
     </div>
-    
   </main>
   <script src="main.js"></script>
 </body>
